# switcher

./: README.md  TODO.md  loc.sh  universal_app_build.sh  view_logs.sh
app/: AppDelegate.h  AppDelegate.m  AppDelegate.mm  BUILD.gn  BoingRenderer.hh  BoingRenderer.mm  CaptureEngine.hh  CaptureEngine.mm  FileUtil.h  FileUtil.hh  FileUtil.mm  LogUtil.mm  Menu.h  Menu.m  OpenGLView.h  OpenGLView.hh  OpenGLView.mm  Renderer.cpp  Renderer.hh  Renderer.hpp  Renderer.mm  Shader.cpp  Shader.hpp  ViewController.h  ViewController.mm  WindowController.h  WindowController.m  main.m  main.mm
app/controller/: CaptureViewController.h  CaptureViewController.mm  ViewController.h  ViewController.m  WindowController.h  WindowController.m  WindowController.mm  shortcut_controller.h  shortcut_controller.mm  view_controller.m  view_controller.mm  window_controller.h  window_controller.m
app/extensions/: AXUIElement.h  AXUIElementRef.h  CGWindow.h  NSImage+InitWithId.h  NSImage+InitWithId.mm  NSWindow+ActuallyCenter.h  NSWindow+ActuallyCenter.m  ScreenCaptureKit+InitWithId.h  ScreenCaptureKit+InitWithId.m  ScreenCaptureKit.h  ScreenCaptureKit.m
app/model/: CaptureEngine.swift  Person.swift  application.h  application.mm  applications.h  applications.mm  capture_content.h  capture_content.mm  capture_engine.h  capture_engine.mm  gl_cocoa.h  gl_cocoa.mm  gl_helpers.h  global_switcher_shortcut.h  global_switcher_shortcut.mm  renderer.cc  renderer.h  shader.cc  shader.h  shortcut_manager.h  shortcut_manager.mm  space.h  space.mm  spaces.h  spaces.mm  window.h  window.mm  window_element.h  window_element.mm
app/private_apis/: AXUIElement.h  CGS.h  CGSHotKeys.h  CGSSpace.h  CGSSpace.m  CGSWindows.h  SkyLight.h
app/resources/: Info.plist
app/resources/shaders/: coordinate_system.fs  coordinate_system.vs  simple.fs  text.vs  texture.vsh  textureRect.fsh  triangle.vs
app/util/: CustomLog.swift  LogUtil.swift  file_util.h  file_util.mm  log_util.h  log_util.mm  shader_util.cc  shader_util.h
app/util_temp/: debug.h  fileUtil.h  fileUtil.mm  shaderUtil.cc  shaderUtil.h
app/view/: CACaptureView.h  CACaptureView.mm  CapturePreview.swift  CaptureView.h  CaptureView.mm  GLCaptureView.h  GLCaptureView.mm  MainView.h  MainView.mm  OpenGLView.h  OpenGLView.mm  SwiftCaptureView.swift  TimerView.h  TimerView.mm  opengl_view.h  opengl_view.mm  swift_capture_view_bridge.h
scripts/: arch.sh  build.sh  loc.sh  view_logs.sh
